# internal/api/handler/config.go
@@ -122,14 +122,15 @@ func (h *ConfigHandler) GetConfig(w http.ResponseWriter, _ *http.Request) {
 			domain.VideoCodecH264,
 			domain.VideoCodecH265,
 			domain.VideoCodecAV1,
-			domain.VideoCodecVP9,
+			domain.VideoCodecMPEG2,
 			domain.VideoCodecCopy,
 		},
 		AudioCodecs: []domain.AudioCodec{
 			domain.AudioCodecAAC,
+			domain.AudioCodecMP2,
 			domain.AudioCodecMP3,
-			domain.AudioCodecOpus,
 			domain.AudioCodecAC3,
+			domain.AudioCodecEAC3,
 			domain.AudioCodecCopy,
 		},
 		OutputProtocols: []string{"hls", "dash", "rtmp", "rtsp", "srt"},
